scrollbar bug removed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*{
+  overflow-x: hidden;
+}
 html,
 body {
   padding: 0;
